css/layout.css
body.has-active-page .help-icon {
  display: block;
}

body.help-open .help-icon {
  display: none;
}

.layout {
  position: relative;
  z-index: 0;
  height: 100vh;
  display: grid;
  grid-template-columns: 230px 1fr;
  grid-template-rows: 100px 1fr;
  grid-template-areas:
    'sidebar header'
    'sidebar main';
}

.layout::before {
  content: '';
  position: absolute;
  z-index: 2;
  top: 96px;
  /* Höhe vom Header */
  left: 0;
  right: 0;
  height: 4px;
  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.1);
  pointer-events: none;
}

.headerContent {
  grid-area: header;
  position: relative;
  z-index: 3;
}

.header {
  background-color: var(--color-bg-primary);
  width: 100%;
}

.header-left {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: calc(100% - 100px);
  max-width: 1920px;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 40px;
  padding-left: 60px;
}

.header-left-wrapper {
  display: flex;
  align-items: center;
}

.header-headline {
  font-size: 20px;
  line-height: 120%;
  letter-spacing: 0%;
  font-weight: 400;
  color: var(--color-text-main);
}

.header-logo {
  display: none;
  width: 32px;
}

.header-right {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
}

.help-icon {
  display: flex;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  border: 1px solid #ccc;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.hide-menu-help {
  display: none;
}

.help-icon:hover {
  transform: scale(1.1);
}

.help-icon img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.header-avatar {
  width: 56px;
  height: 56px;
  border-radius: 50%;
  border: 3px solid var(--color-bg-secondary);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  color: var(--color-highlights);
  font-weight: bold;
  font-size: 18px;
}

.header-avatar:hover {
  background-color: rgba(12, 46, 98, 0.12);
}

.avatar-dropdown {
  position: fixed;
  display: none;
  top: 120px;
  right: 20px;
  flex-direction: column;
  padding: 10px;
  background-color: var(--color-bg-secondary);
  padding: 12px;
  border-radius: 20px 0px 20px 20px;
  box-shadow: 0px 0px 4px 0px #0000001a;
  z-index: 999;
}

.avatar-dropdown.open {
  display: flex;
}

.avatar-dropdown-item {
  font-weight: 400;
  font-size: 16px;
  color: var(--color-menu-button-text);
  text-decoration: none;
  padding: 10px;
}

.avatar-dropdown-item:hover {
  background-color: var(--color-menu-hover);
}

.inner-sidebar-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100vh;
}

.sidebarContent {
  grid-area: sidebar;
  position: relative;
  z-index: 4;
  background-color: var(--color-bg-secondary);
}

.menu-top {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 60px;
}

.nav-item {
  gap: 8px;
}

.nav-item:hover {
  background-color: var(--color-menu-hover);
}

.nav-item.active {
  background-color: var(--color-menu-active);
  cursor: default;
}

.nav-icon {
  width: 30px;
  height: 30px;
}

.nav-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 120%;
  letter-spacing: 0%;
}

.menu-center {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 100%;
}

.menu-bottom {
  display: flex;
  flex-direction: column;
  gap: 4px;
  padding-bottom: 60px;
}

.nav-item,
.nav-link {
  display: flex;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  width: calc(230px - 56px);
  padding-left: 56px;
  color: var(--color-menu-button-text);
  cursor: pointer;
}

.nav-link.active {
  background-color: var(--color-menu-active);
  cursor: default;
  transform: none;
}

.menu-bottom-link {
  font-weight: 400;
  font-size: 16px;
  color: var(--color-menu-button-text);
}

.nav-link:not(.active) .menu-bottom-link:hover {
  color: var(--color-highlights);
  transform: scale(1.1);
}

.mainContent {
  grid-area: main;
  background-color: var(--color-bg-quaternary);
  position: relative;
  z-index: 1;
  overflow: auto;
}

.backarrow-placeholder {
  position: sticky;
  top: 20px;
  right: 50px;
  z-index: 1000;
  height: 0;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.backarrow {
  width: 32px;
  height: 32px;
}

.backarrow-link {
  height: 32px;
  width: 32px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
}

.backarrow-link:hover {
  background-color: rgba(0, 0, 0, 0.05);
  border-radius: 50%;
}

main {
  overflow-y: auto;
}

@media (max-width: 760px) {
  .layout {
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr auto;
    grid-template-areas:
      'header'
      'main'
      'sidebar';
  }

  .inner-sidebar-content {
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-evenly;
    max-height: unset;
    height: 100%;
    align-items: center;
  }

  .hide-menu-help {
    display: block;
  }

  .header-left {
    gap: 16px;
    width: calc(100% - 32px);
    padding: 20px 16px;
  }

  .header-logo {
    display: flex;
  }

  .header-headline {
    display: none;
  }

  .help-icon {
    display: none;
  }

  .aside-logo {
    display: none;
  }

  .menu-bottom {
    display: none;
  }

  .menu-center {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    gap: unset;
    width: 100%;
  }

  .nav-item {
    flex-direction: column;
    padding: 10px;
    width: auto;
    border-radius: 8px;
    cursor: pointer;
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
  }
}

